# wasm-cmake-build

./: CMakeLists.txt  CMakePresets.json  README.md  test_math.js
libs/base_math/: CMakeLists.txt
libs/base_math/include/base_math/: base_math.h
libs/base_math/src/: base_math.cpp
libs/calc/: CMakeLists.txt
libs/calc/include/calc/: calc.h
libs/calc/src/: calc.cpp
libs/shape/include/shape/: Rectangle.h
libs/shape/src/: Rectangle.cpp
tui/calc_rect_surface/: CMakeLists.txt
tui/calc_rect_surface/src/: main.cpp
